# msdfont-proto

./: Cargo.toml  README.md
fonts/: charset.txt  font.arfont  fontsdf.arfont
src/: camera.rs  main.rs  text.rs  util.rs
src/shaders/: aa_broken.wgsl  best.wgsl  cheap.wgsl  line.wgsl  shader.wgsl  test.wgsl  test1.wgsl  test2.wgsl
