[package]
name = "sdfer-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
winit = "0.26.1"
pollster = "0.2.5"
nalgebra = "0.31.1"
env_logger = "0.9.0"
msdfgen = "0.1.0"
ttf-parser = "0.15.2"
rusttype = "0.9.2"

[dependencies.bytemuck]
version = "1.11.0"
features = ["derive"]

[dependencies.artery-font]
version = "1.0.1"
features = ["png"]