[package]
name = "sdfer-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.2"
winit = "0.27.5"
pollster = "0.2.5"
nalgebra = "0.32.1"
env_logger = "0.10.0"
# rusttype = "0.9.3"

[dependencies.bytemuck]
version = "1.11.0"
features = ["derive"]

[dependencies.artery-font]
version = "1.0.1"
features = ["png"]